--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -23,8 +23,8 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Datan" class="control-label"></label>
-                <input asp-for="Datan" class="form-control" />
+                <label asp-for="Datan" for="startDate" class="control-label"></label>
+                <input asp-for="Datan" id="startDate" class="form-control" type="date" />
                 <span asp-validation-for="Datan" class="text-danger"></span>
             </div>
             <div class="form-group">
