--- a/Views/Clientes/Create.cshtml
+++ b/Views/Clientes/Create.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar Cadastro</h1>
 
 <h4>Cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Criar Cadastro">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Codigo" class="control-label"></label>
